--- a/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
@@ -84,7 +84,7 @@
 
 						<h:outputText value="Causas" />
 						<h:outputText
-							value="#{consultaEventosView.selectedEvento.causasString}"
+							value="#{consultaEventosView.selectedEvento.causa}"
 							style="font-weight: bold" />
 
 						<p:button value="Editar" outcome="editarEvento.xhtml"
