--- a/src/main/webapp/sistema/Voluntario/cadastrarEvento.xhtml
+++ b/src/main/webapp/sistema/Voluntario/cadastrarEvento.xhtml
@@ -64,9 +64,9 @@
 						<p:fileUpload id="foto" mode="simple"
 							value="#{eventoController.uploadedFile}" />
 
-						<p:outputLabel value="Causas" />
+						<p:outputLabel value="Causa" />
 						<p:selectOneMenu id="basic"
-							value="#{eventoController.eventoModel.causas}" layout="grid"
+							value="#{eventoController.eventoModel.causa}" layout="grid"
 							columns="2" required="true"
 							requiredMessage="O campo Causas é de preenchimento obrigatório">
 							<f:selectItem itemLabel="Escolha uma causa" itemValue="0" />
