--- a/src/main/webapp/sistema/Voluntario/editarEvento.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarEvento.xhtml
@@ -76,11 +76,14 @@
 						<p:fileUpload id="foto" mode="simple"
 							value="#{editarEvento.uploadedFile}" />
 
-						<p:outputLabel value="Causas" />
+						<p:outputLabel value="Causa" />
 
-						<p:selectManyCheckbox value="#{editarEvento.evento.causas}"
-							layout="grid" columns="2" required="false"
+						<p:outputLabel value="Causa" />
+						<p:selectOneMenu id="basic"
+							value="#{eventoController.eventoModel.causa}" layout="grid"
+							columns="2" required="true"
 							requiredMessage="O campo Causas é de preenchimento obrigatório">
+							<f:selectItem itemLabel="Escolha uma causa" itemValue="0" />
 							<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
 							<f:selectItem itemLabel="Saude" itemValue="1" />
 							<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
@@ -96,8 +99,7 @@
 							<f:selectItem itemLabel="Capacitação Profissional" itemValue="11" />
 							<f:selectItem itemLabel="Combate à pobreza" itemValue="12" />
 							<f:selectItem itemLabel="Outras" itemValue="13" />
-						</p:selectManyCheckbox>
-
+						</p:selectOneMenu>
 
 
 						<p:commandButton value="Salvar Evento" id="commandButton-salvar"
