--- a/src/main/webapp/sistema/ONG/editarEvento.xhtml
+++ b/src/main/webapp/sistema/ONG/editarEvento.xhtml
@@ -43,8 +43,7 @@
 						<p:inplace id="inputText-responsavel" editor="true"
 							emptyLabel="Clique para editar">
 							<p:inputText style="width:100%" maxlength="80"
-								value="#{editarEvento.evento.nomeResponsavel}" required="true"
-								requiredMessage="O campo responsavel é de preenchimento obrigatório" />
+								value="#{editarEvento.evento.nomeResponsavel}" />
 						</p:inplace>
 
 						<p:outputLabel value="Local do evento" for="inputText-local" />
@@ -78,7 +77,7 @@
 
 						<p:outputLabel value="Causa" />
 						<p:selectOneMenu id="basic"
-							value="#{eventoController.eventoModel.causa}" layout="grid"
+							value="#{editarEvento.evento.causa}" layout="grid"
 							columns="2" required="true"
 							requiredMessage="O campo Causas é de preenchimento obrigatório">
 							<f:selectItem itemLabel="Escolha uma causa" itemValue="0" />
