--- a/src/main/webapp/sistema/ONG/cadastrarVaga.xhtml
+++ b/src/main/webapp/sistema/ONG/cadastrarVaga.xhtml
@@ -125,8 +125,8 @@
 							value="#{vagaController.vagaModel.trabalhoDistancia}"
 							required="true"
 							requiredMessage="O campo trabalho à distancia é de preenchimento obrigatório">
-							<f:selectItem itemLabel="Sim" itemValue="Sim" />
-							<f:selectItem itemLabel="Não" itemValue="Não" />
+							<f:selectItem itemLabel="Sim" itemValue="S" />
+							<f:selectItem itemLabel="Não" itemValue="N" />
 						</p:selectOneRadio>
 
 						<p:commandButton value="Salvar" id="commandButton-salvar"
