--- a/src/main/webapp/sistema/ONG/recomendarVoluntario.xhtml
+++ b/src/main/webapp/sistema/ONG/recomendarVoluntario.xhtml
@@ -23,6 +23,7 @@
 						<h:panelGrid columns="2" cellpadding="10">
 							<p:graphicImage name="demo/images/godfather/godfather1.jpg" />
 							<h:outputText value="The story begins as Don Vito Corleone..." />
+							<h:outputText value="#{recomendarVoluntarios.voluntariosRecomendados.get(0).nome}" />
 						</h:panelGrid>
 					</p:panel>
 
