--- a/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
@@ -83,23 +83,27 @@
 							style="font-weight: bold" />
 
 						<h:outputText value="Causas" />
-						<h:outputText value="#{consultaEventosView.selectedEvento.causasString}"
+						<h:outputText
+							value="#{consultaEventosView.selectedEvento.causasString}"
 							style="font-weight: bold" />
 
 						<p:button value="Editar" outcome="editarEvento.xhtml"
 							disabled="#{!(consultaEventosView.botaoEditar)}">
 						</p:button>
 
-			</p:panelGrid>
+						<p:commandButton value="Curtir" id="commandButton-curtir"
+							icon="ui-icon-like" action="#{consultaEventosView.curtirEvento}" />
+
+					</p:panelGrid>
 				</p:outputPanel>
 			</p:dialog>
-			
+
 			<p:messages showDetail="true" autoUpdate="true" closable="true"
-						severity="warn" />
-					<p:messages autoUpdate="true" closable="true" severity="error" />
-					<p:messages showDetail="true" autoUpdate="true" closable="true"
-						severity="info" />
-			
+				severity="warn" />
+			<p:messages autoUpdate="true" closable="true" severity="error" />
+			<p:messages showDetail="true" autoUpdate="true" closable="true"
+				severity="info" />
+
 		</h:form>
 	</ui:define>
 </ui:composition>
