--- a/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
@@ -91,8 +91,13 @@
 							disabled="#{!(consultaEventosView.botaoEditar)}">
 						</p:button>
 
+						<h:outputText value="Basic:" />
+						<p:rating value="#{consultaEventosView.avaliacao}" />
+
 						<p:commandButton value="Curtir" id="commandButton-curtir"
 							icon="ui-icon-like" action="#{consultaEventosView.curtirEvento}" />
+
+
 
 					</p:panelGrid>
 				</p:outputPanel>
