--- a/src/main/webapp/sistema/ONG/visualizarDoacoes.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarDoacoes.xhtml
@@ -16,9 +16,9 @@
 
 			<p:dataGrid value="#{consultaDoacoesView.doacoes}" var="doacao"
 				columns="3" layout="grid" rows="9" paginator="true"
-				style="margin-top:20px; margin-right:20px; margin-left:20px">
+				style="margin-top:20px">
 
-				<f:facet name="header"> doacoes </f:facet>
+				<f:facet name="header"> Doações </f:facet>
 
 				<p:panel header="#{doacao.titulo}" style="text-align:center">
 					<h:panelGrid columns="1" style="width:100%; hight:200px">
