Correções - Tela > Evento

--- a/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
@@ -123,7 +123,7 @@
 				</p:outputPanel>
 			</p:dialog>
 			
-			<p:dialog header="Evento Info" widgetVar="eventoRecomenddoDialog" modal="true"
+			<p:dialog header="Evento Info" widgetVar="eventoRecomendadoDialog" modal="true"
 				showEffect="blind" hideEffect="explode" resizable="false">
 				<p:outputPanel id="eventoRecomendadoDetail" style="text-align:center;">
 					<p:panelGrid columns="2"
