--- a/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
@@ -188,7 +188,7 @@
 							style="font-weight: bold" />
 
 						<p:commandButton value="Tenho Interesse!"
-							id="commandButton-salvar" icon="ui-icon-like"
+							id="commandButton-interesse" icon="ui-icon-like"
 							action="#{consultaVagasView.enviarEmailInteresse}" />
 
 					</p:panelGrid>
