--- a/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
@@ -16,12 +16,13 @@
 
 			<p:dataGrid value="#{consultaEventosView.eventos}" var="evento"
 				columns="3" layout="grid" rows="6" paginator="true"
-				style="margin-top:20px; margin-right:20px; margin-left:20px">
+				style="margin-top:20px">
 
 				<f:facet name="header"> Eventos </f:facet>
 
 				<p:panel header="#{evento.titulo}" style="text-align:center">
-					<h:panelGrid columns="1" style="width:100%; hight:200px">
+					<h:panelGrid columns="1" style="width:100%; hight:200px"
+						styleClass="ui-noborder">
 
 						<p:commandLink update=":form:eventoDetail"
 							action="#{consultaEventosView.ativarBotoes}"
@@ -53,7 +54,7 @@
 			<p:dialog header="Evento Info" widgetVar="eventoDialog" modal="true"
 				showEffect="blind" hideEffect="explode" resizable="false">
 				<p:outputPanel id="eventoDetail" style="text-align:center;">
-					<p:panelGrid columns="2"
+					<p:panelGrid columns="2" styleClass="ui-noborder"
 						rendered="#{not empty consultaEventosView.selectedEvento}"
 						columnClasses="label,value">
 
@@ -83,23 +84,27 @@
 							style="font-weight: bold" />
 
 						<h:outputText value="Causas" />
-						<h:outputText value="#{consultaEventosView.selectedEvento.causasString}"
+						<h:outputText
+							value="#{consultaEventosView.selectedEvento.causasString}"
 							style="font-weight: bold" />
+
+						<h:outputText value=" " />
+						<h:outputText value=" " />
 
 						<p:button value="Editar" outcome="editarEvento.xhtml"
 							disabled="#{!(consultaEventosView.botaoEditar)}">
 						</p:button>
 
-			</p:panelGrid>
+					</p:panelGrid>
 				</p:outputPanel>
 			</p:dialog>
-			
+
 			<p:messages showDetail="true" autoUpdate="true" closable="true"
-						severity="warn" />
-					<p:messages autoUpdate="true" closable="true" severity="error" />
-					<p:messages showDetail="true" autoUpdate="true" closable="true"
-						severity="info" />
-			
+				severity="warn" />
+			<p:messages autoUpdate="true" closable="true" severity="error" />
+			<p:messages showDetail="true" autoUpdate="true" closable="true"
+				severity="info" />
+
 		</h:form>
 	</ui:define>
 </ui:composition>
